@@ -1,6 +1,11 @@
 Chronological listing of changes. If a particular SVN revision has no entry, that
 check-in did not involve any code or feature changes.
 
+2010-04-18 (r56)
+
+* Added block constraints and invocation handler (thanks to Justin DeWind)
+
+
 2009-10-16 (r55)
 
 * Fixed broken test for array argument descciptions (Craig Beck)
